# cyber_wizard

./: README.md  config.py  pyproject.toml
src/: camera.py  display.py  hardware_control.py  main.py  speech.py
